added opengraph tags

--- a/login.html
+++ b/login.html
@@ -6,10 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./img/logo-small.png">
 
-  <meta property="og:title" content="Instagram" />
+  <meta property="og:title" content="Instagram Reels" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://" />
-  <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+  <meta property="og:url" content="https://instagrammreel.github.io/instagram/login.html" />
+  <meta property="og:image" content="https://instagrammreel.github.io/instagram/img/preview.png" />
+
+  <meta property="og:description" content="Instagram">
+  <meta property="og:site_name" content="Instagram">
 
   <title>Instagram</title>
 
